Added auth routes and exercise schema

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -79,6 +79,10 @@ select {
 
 .login-container {
   width: 400px;
-  margin-top: 50px;
+  margin-top: 3rem;
   text-align: center;
+}
+
+.main-container {
+  margin-top: 3rem;
 }
