--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,6 +1,6 @@
-<h3>Football Blog</h3>
+<h3>Exercise Tracker</h3>
 <div class="section">
-  <p>Create public and private posts about football</p>
+  <p>Please login to start</p>
 </div>
 <div class="divider"></div>
 <div class="section">
