--- a/views/layouts/login.hbs
+++ b/views/layouts/login.hbs
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
   <link rel="stylesheet" href="/css/style.css">
-  <title>Football Blog | Login</title>
+  <title>Exercise Tracker | Login</title>
 </head>
 
 <body>
