--- a/views/exercises/add.hbs
+++ b/views/exercises/add.hbs
@@ -1,4 +1,5 @@
-<h3>Add Exercise</h3>
+<h6>Add Exercise</h6>
+<br />
 <div class="row">
   <form action="/exercises" method="POST" class="col s12">
     <div class="row">
@@ -7,14 +8,10 @@
         <label for="name">Name</label>
       </div>
       <div class="input-field col s6">
-        <input placeholder="Description" id="Description" type="text" class="validate" name="description">
-        <label for="Description">Description</label>
-      </div>
-      <div class="input-field col s6">
         <input placeholder="Duration" id="Duration" type="text" class="validate" name="duration">
         <label for="Duration">Duration</label>
       </div>
     </div>
-    <input class="btn" type="submit" value="Submit">
+    <input class="btn deep-purple darken-4" type="submit" value="Add">
   </form>
 </div>
