--- a/views/partials/_header.hbs
+++ b/views/partials/_header.hbs
@@ -3,6 +3,7 @@
     <a href="#!" class="brand-logo">Exercise Tracker</a>
     <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="fas fa-bars"></i></a>
     <ul class="right hide-on-med-and-down">
+      <li><a href="/exercises">Home</a></li>
       <li><a href="/dashboard">Dashboard</a></li>
       <li><a href="/auth/logout">Logout</a></li>
     </ul>
