Added friends list in schema

--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -1,6 +1,5 @@
-<h6>{{name}}'s Dashboard</h6>
+<h6 class="heading">{{name}}'s Dashboard</h6>
 <br />
-<p>Here are your recent exercises:</p>
 {{#if exercises}}
 <table class="striped">
   <thead>
