--- a/views/exercises/add.hbs
+++ b/views/exercises/add.hbs
@@ -1,4 +1,4 @@
-<h6>Add Exercise</h6>
+<h6 class="heading">Add Exercise</h6>
 <br />
 <div class="row">
   <form action="/exercises" method="POST" class="col s12">
