--- a/views/exercises/index.hbs
+++ b/views/exercises/index.hbs
@@ -1,6 +1,5 @@
-<h6>All User Exercises</h6>
+<h6 class="heading">Recent Activity</h6>
 <br />
-<p>Here is everyones recent exercises:</p>
 {{#if exercises}}
 <table class="striped">
   <thead>
