--- a/views/partials/_header.hbs
+++ b/views/partials/_header.hbs
@@ -1,16 +1,18 @@
 <nav class="deep-purple darken-4">
   <div class="nav-wrapper container">
-    <a href="#!" class="brand-logo">Exercise Tracker</a>
     <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="fas fa-bars"></i></a>
     <ul class="right hide-on-med-and-down">
-      <li><a href="/exercises">Home</a></li>
       <li><a href="/dashboard">Dashboard</a></li>
       <li><a href="/auth/logout">Logout</a></li>
+    </ul>
+    <ul class="deep-purple lighten-2 left hide-on-med-and-down">
+      <li><a href="/exercises">Exercises</a></li>
     </ul>
   </div>
 </nav>
 
 <ul class="sidenav" id="mobile-demo">
+  <li><a href="/exercises">Exercises</a></li>
   <li><a href="/dashboard">Dashboard</a></li>
   <li><a href="/auth/logout">Logout</a></li>
 </ul>
