--- a/public/css/style.css
+++ b/public/css/style.css
@@ -77,12 +77,18 @@ select {
   }
 }
 
+.heading {
+  text-transform: uppercase;
+  font-weight: bold;
+  letter-spacing: 0.2em;
+}
+
 p {
   margin-bottom: 1rem;
 }
 
 .login-container {
-  width: 400px;
+  max-width: 700px;
   margin-top: 3rem;
   text-align: center;
 }
